more items to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,6 @@ Desktop.ini
 
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
+bin/Debug/net6.0/cSharp_IntermediateConcepts.dll
+bin/Debug/net6.0/cSharp_IntermediateConcepts.dll
+bin/Debug/net6.0/cSharp_IntermediateConcepts.dll
