--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,4 @@ Desktop.ini
 
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
-bin/Debug/net6.0/cSharp_IntermediateConcepts.dll
-bin/Debug/net6.0/cSharp_IntermediateConcepts.dll
-bin/Debug/net6.0/cSharp_IntermediateConcepts.dll
+bin/Debug/*
